[metadata]
name = py-console-stacked-bar-chart
version = 1.0.0
author = Adonis Elfakih
author_email = adoniselfakih@gmail.com
description = Draw colorful stacked bar charts in terminal programs using Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aelfakih/py-console-stacked-bar-chart
project_urls =
    Bug Tracker = https://github.com/aelfakih/py-console-stacked-bar-chart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src